<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.therapy.connect</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<parent.version>0.0.1</parent.version>
		<org.mapstruct.version>1.6.3</org.mapstruct.version>
		<spring-cloud.version>2024.0.0</spring-cloud.version>
	</properties>

	<modules>
		<module>core</module>
		<module>util</module>
		<module>user</module>
		<module>blog</module>
		<module>review</module>
		<module>registry</module>
		<module>gateway</module>
		<module>configserver</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>com.therapy.connect</groupId>
			<artifactId>util</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>${project.artifactId}</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<release>${java.version}</release>
						<parameters>true</parameters>
						<showWarnings>true</showWarnings>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<!-- Mapstruct should follow the lombok path(s) -->
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${org.mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
						<compilerArgs>
							<compilerArg>--enable-preview</compilerArg>
							<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
							<compilerArg>-Amapstruct.defaultInjectionStrategy=constructor</compilerArg>
						</compilerArgs>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.hibernate.orm.tooling</groupId>
					<artifactId>hibernate-enhance-maven-plugin</artifactId>
					<version>${hibernate.version}</version>
					<executions>
						<execution>
							<id>enhance</id>
							<goals>
								<goal>enhance</goal>
							</goals>
							<configuration>
								<enableLazyInitialization>true</enableLazyInitialization>
								<enableDirtyTracking>true</enableDirtyTracking>
								<enableAssociationManagement>true</enableAssociationManagement>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
